# codes

./: CMakeLists.txt  README.md
GoshaStudy/: CMakeLists.txt  a.out  goshafirsttask.cpp  goshafirsttask.cpp~  main.cpp  newtest.cpp
connectedComponents/: CMakeLists.txt  capture.cpp  components.cpp  components.hpp  main.cpp
dummy_example/: CMakeLists.txt
surveillance/: CMakeLists.txt  capture.cpp  main.cpp  surveillance.cpp  surveillance.hpp
